feat: getTopUsers 添加 sortby - 總金額, 總口罩數
